--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.2.2",
     "sass": "^1.57.1",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-lang-code-flags": "^1.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
